deploy/dso-demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dso-demo
  name: dso-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dso-demo
  strategy: {}
  template:
    metadata:
      labels:
        app: dso-demo
    spec:
      containers:
      - image: docker.io/dmaxim/dso-demo:latest
        name: dso-demo
        ports:
        - containerPort: 8080
