deploy/dso-demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dso-demo
  name: dso-demo
spec:
  ports:
  - name: "8080"
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: dso-demo
  type: ClusterIP
