deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dso-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/rewrite-target: /
    cert-manager.io/issue-temporary-certificate: 'true'
    cert-manager.io/acme-http01-edit-in-place: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    #nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  rules:
    - host: dso-demo.maxdevsec.com
      http:
        paths:
          - backend:
              service:
                name: dso-demo
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dso-demo.maxdevsec.com
      secretName: dso-demo-tls
